# Dive

./: .dev-log.txt  .dockerignore  .env.example  .gitignore  .gitmodules  Architecture.md  BUILD.md  LICENSE  README.md  drizzle.config.ts  electron-builder.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.electron.ts  vite.config.service.ts  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml
docker/linux-tauri-build/: Dockerfile  README.md
docker/win-build/: Dockerfile
drizzle/: 0000_tidy_skin.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
electron/: electron-env.d.ts  schema.ts
electron/config/: hotkey.ts  index.ts  keymap.ts
electron/main/: constant.ts  deeplink.ts  index.ts  mcp.ts  oap.ts  protocol.ts  service.ts  state.ts  store.ts  tray.ts  update.ts  util.ts
electron/preload/: index.ts
patches/: @codemirror+state+6.5.2.patch  @modelcontextprotocol+sdk+1.1.1.patch  @modelcontextprotocol+sdk+1.4.1.patch  JSV+4.0.2.patch
prebuilt/scripts/: echo.cjs  echo.js  package-lock.json  package.json
public/: sw.js
public/linux/: dive-ai.desktop
resources/mac/: entitlements.mac.plist
scripts/: before-package.ts  checkI18n.js  download-host-deps.ts  download-node.sh  download-node.ts  download-python-via-uv.ts  download-python.ts  download-uv.ts  install-deps.sh  notarizer.js  publish-to-oap.sh
scripts/docker/: build-linux-tauri.sh  build-win.sh  build-with-apple-container.sh
services/: client.ts  connectServer.ts  index.ts  main.ts  processQuery.ts  webServer.ts
services/__tests__/: client.test.ts  connectServer.test.ts  processQuery.test.ts
services/database/: index.ts  schema.ts
services/mcpServer/: index.ts  interface.ts
shared/: keymap.ts  oap.ts  preload.js
src/: App.scss  App.tsx  Root.tsx  constants.ts  i18n.ts  index.css  main.tsx  router.tsx  updater.tsx  util.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codesign.rs  configs.rs  dependency.rs  event.rs  host.rs  lib.rs  main.rs  mcp.rs  oap.rs  shared.rs  tray.rs  util.rs
src-tauri/src/command/: host.rs  llm.rs  mod.rs  oap.rs  system.rs
src-tauri/src/process/: command.rs  mod.rs
src-tauri/src/state/: mod.rs  oap.rs
src-tauri/windows/: hook.nsh
types/: model.d.ts  oap.d.ts
(+194 files in other folders)
