[package]
name = "dive"
version = "0.9.2"
description = "Dive"
authors = ["Open Agent Platform"]
license = "MIT"
repository = "https://github.com/OpenAgentPlatform/Dive"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
md5 = "0.8.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1"
tauri-plugin-http = { version = "2", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
tauri = { version = "2.5.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
tauri-plugin-deep-link = "2.4.1"
tauri-plugin-opener = "2"
dirs = "6.0.0"
target-triple = "0.1.4"
const_format = "0.2.34"
phf = { version = "0.12", features = ["macros"] }
sha2 = "0.10.9"
image = "0.25.6"
hostname = "0.4.1"
url = "2"
dunce = "1.0.5"
tauri-plugin-process = "2"
tokio-tungstenite = { version = "0.27.0", features = ["native-tls", "tokio-native-tls"] }
async-openai = { version = "0.29.0", features = ["native-tls"], default-features = false }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30.0", features = ["fs", "signal"] }
libc = "0.2.174"

[target.'cfg(not(target_os = "windows"))'.dependencies]
flate2 = "1.1.2"
tar = "0.4.44"

[target.'cfg(target_os = "windows")'.dependencies]
zip = "4.2.0"
win32job = "2"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "z" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
